@@ -49,26 +49,6 @@ void plusd_end( void );
 void plusd_page( void );
 void plusd_unpage( void );
 
-libspectrum_byte plusd_sr_read( libspectrum_word port, int *attached );
-void plusd_cr_write( libspectrum_word port, libspectrum_byte b );
-
-libspectrum_byte plusd_tr_read( libspectrum_word port, int *attached );
-void plusd_tr_write( libspectrum_word port, libspectrum_byte b );
-
-libspectrum_byte plusd_sec_read( libspectrum_word port, int *attached );
-void plusd_sec_write( libspectrum_word port, libspectrum_byte b );
-
-libspectrum_byte plusd_dr_read( libspectrum_word port, int *attached );
-void plusd_dr_write( libspectrum_word port, libspectrum_byte b );
-
-void plusd_cn_write( libspectrum_word port, libspectrum_byte b );
-
-libspectrum_byte plusd_patch_read( libspectrum_word port, int *attached );
-void plusd_patch_write( libspectrum_word port, libspectrum_byte b );
-
-libspectrum_byte plusd_printer_read( libspectrum_word port, int *attached );
-void plusd_printer_write( libspectrum_word port, libspectrum_byte b );
-
 int plusd_disk_insert( plusd_drive_number which, const char *filename,
 		       int autoload );
 int plusd_disk_eject( plusd_drive_number which );
