@@ -39,9 +39,6 @@ void if1_page( void );
 void if1_unpage( void );
 void if1_memory_map( void );
 
-void if1_port_out( libspectrum_word port, libspectrum_byte val );
-libspectrum_byte if1_port_in( libspectrum_word port, int *attached );
-
 int if1_mdr_insert( int drive, const char *filename );
 int if1_mdr_write( int drive, const char *filename );
 int if1_mdr_eject( int drive );
